@@ -1,6 +1,6 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2013-06-21 11:20
+// This file was generated on 2014-04-29 10:58
 
 $extensionPath = t3lib_extMgm::extPath('ics_libnavitia');
 $extensionClassesPath = $extensionPath . 'Classes/';
@@ -9,6 +9,7 @@ return array(
 	'tx_icslibnavitia_addresstype' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_AddressType.php',
 	'tx_icslibnavitia_apiservice' => $extensionClassesPath . 'Services/class.tx_icslibnavitia_APIService.php',
 	'tx_icslibnavitia_backward' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Backward.php',
+	'tx_icslibnavitia_cachemanager' => $extensionClassesPath . 'class.tx_icslibnavitia_CacheManager.php',
 	'tx_icslibnavitia_call' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Call.php',
 	'tx_icslibnavitia_callvalue' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_CallValue.php',
 	'tx_icslibnavitia_city' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_City.php',
